# genetic_algorithm_for_nitrogen_fixation

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  genetic_algorithm_driver.py  pyproject.toml  requirements.txt
classes/: GeneticAlgorithm.py  XTB_class.py  handlers.py  schrock_paralell.py  tm_complex.py
data/: bidentate_uncharged.sdf
utils/: gaussians.py  sa.py  utils.py
